--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,10 @@
 @import "blocks/logo/logo.less";
 @import "blocks/favourites/favourites.less";
 @import "blocks/additional/additional.less";
+@import "blocks/main/main.less";
+@import "blocks/gallery-list/gallery-list.less";
+@import "blocks/gallery/gallery.less";
+@import "blocks/abouts/abouts.less";
+@import "blocks/about/about.less";
+@import "blocks/abouts-list/abouts-list.less";
+@import "blocks/news/news.less";
