--- a/source/less/global.less
+++ b/source/less/global.less
@@ -27,9 +27,10 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
-  width: 1600px;
+  width: 100%;
   height: 100vh;
   outline: 1px solid red;
+  box-shadow: inset -30px -50px 400px 70px rgba(0, 0, 0, 0.9);
 }
 
 .visually-hidden {
