--- a/source/less/blocks/news/news.less
+++ b/source/less/blocks/news/news.less
@@ -1,8 +1,8 @@
 .news {
-    width: 320px;
+    width: 310px;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
+    padding-top: 35px;
 }
 
 .news .news__image {
@@ -21,6 +21,8 @@
 .news .news__title {
     font-size: 12px;
     text-decoration: underline;
+    margin: 0;
+    padding-top: 2px;
 }
 
 .news__title a {
@@ -33,4 +35,5 @@
     text-align: left;
     font-weight: bold;
     text-decoration: underline;
+    padding-top: 12px;
 }
