--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,3 +15,9 @@
 @import "blocks/about/about.less";
 @import "blocks/abouts-list/abouts-list.less";
 @import "blocks/news/news.less";
+@import "blocks/contacts/contacts.less";
+@import "blocks/other/other.less";
+@import "blocks/others-list/others-list.less";
+@import "blocks/social-list/social-list.less";
+@import "blocks/social/social.less";
+@import "blocks/footer/footer.less";
