--- a/source/less/blocks/main/main.less
+++ b/source/less/blocks/main/main.less
@@ -6,5 +6,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: center;
-    padding-top: 467px;
+    padding-top: 457px;
+    width: 1600px;
+    margin: 0 auto;
 }
