flex-end positioning

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,3 +21,4 @@
 @import "blocks/social-list/social-list.less";
 @import "blocks/social/social.less";
 @import "blocks/footer/footer.less";
+@import "blocks/container/container.less";
