--- a/source/less/global.less
+++ b/source/less/global.less
@@ -28,6 +28,7 @@ body {
   background-position: center;
   background-size: 100% 100%;
   width: 100%;
+  height: 100vh;
   box-shadow: inset -30px -230px 400px 40px rgba(0, 0, 0, 1);
 }
 
