--- a/source/less/blocks/favourites/favourites.less
+++ b/source/less/blocks/favourites/favourites.less
@@ -4,7 +4,7 @@
     align-items: center;
     color: white;
     font-size: 12px;
-    right: 104px;
+    right: -185px;
     top: 85px;
 }
 
@@ -23,6 +23,7 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .favourites__count span {
