--- a/source/less/blocks/about/about.less
+++ b/source/less/blocks/about/about.less
@@ -1,20 +1,33 @@
 .about {
-    background-color: rgba(0, 0, 0, 0.8);
-    outline: 1px solid @border;
+  background-color: rgba(0, 0, 0, 0.8);
+  outline: 1px solid @border;
 }
 
 .about .about__image {
-    display: block;
-    width: 159px;
-    height: 74px;
+  display: block;
+  width: 159px;
+  height: 74px;
+  overflow: hidden;
 }
 
 .about .about__name {
-    display: block;
-    margin: 0 auto;
-    padding: 10px 0px 10px 0px;
-    color: white;
-    font-size: 13px;
-    font-weight: normal;
-    text-align: center;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 0 10px 0;
+
+  font-weight: normal;
+  font-size: 13px;
+  text-align: center;
+  color: white;
+}
+
+
+
+.about__link:hover img {
+  transform: scale(1.1);
+
+  -webkit-transition: all 1s ease-out;
+       -o-transition: all 1s ease-out;
+
+  moz-transition: all 1s ease-out;
 }
