--- a/source/less/blocks/header/header.less
+++ b/source/less/blocks/header/header.less
@@ -1,4 +1,6 @@
 .header {
-    position: relative;
-    width: 1600px;
+  padding-bottom: 5px;
+  width: 1600px;
+  margin: 0 auto;
+  position: relative;
 }
