--- a/source/less/blocks/navigation/navigation.less
+++ b/source/less/blocks/navigation/navigation.less
@@ -1,4 +1,5 @@
 .navigation {
+    position: relative;
     width: 1025px;
     margin: 0 auto;
     padding: 75px 0px 7px 0px;
@@ -10,4 +11,8 @@
     color: black;
     text-transform: uppercase;
     letter-spacing: -0.9px;
+
+    &:hover {
+      color: #d6434e;
+    }
 }
