--- a/source/less/global.less
+++ b/source/less/global.less
@@ -18,18 +18,11 @@ img {
 }
 
 body {
-  position: relative;
   margin: 0 auto;
   padding: 0;
 
   font-family: "Open Sans", "Arial", sans-serif;
-  background-image: url("../img/bg1.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100% 100%;
-  width: 100%;
-  height: 100vh;
-  box-shadow: inset -30px -230px 400px 40px rgba(0, 0, 0, 1);
+  background-color: black;
 }
 
 .visually-hidden {
