--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "global.less";
 @import "variables.less";
 @import "mixins.less";
+@import "blocks/header/header.less";
 @import "blocks/navigation/navigation.less";
 @import "blocks/nav-list/nav-list.less";
 @import "blocks/logo/logo.less";
@@ -22,3 +23,5 @@
 @import "blocks/social/social.less";
 @import "blocks/footer/footer.less";
 @import "blocks/container/container.less";
+@import "blocks/wrapper/wrapper.less";
+@import "blocks/popup/popup.less";
